--- a/index.html
+++ b/index.html
@@ -58,27 +58,28 @@
                 <i class="fa-solid fa-bars"></i>
             </div>
         </div>
-    </div>
-    <div id="bar" class="main1">
-        <div class="main">
-            <div class="flex_bar">
-                <div class="bar_search">
-                    <input placeholder="🔍Search your keywords...">
+        <div id="bar" class="main1">
+            <div class="main">
+                <div class="flex_bar">
+                    <div class="bar_search">
+                        <input placeholder="🔍Search your keywords...">
+                    </div>
+                    <div id="cross" class="close">
+                        <i class="fa-solid fa-xmark"></i>
+                    </div>
                 </div>
-                <div id="cross" class="close">
-                    <i class="fa-solid fa-xmark"></i>
+                <div class="parts">
+                    <p><b>Home</b></p>
+                    <p><b>About</b></p>
+                    <p><b>Login</b></p>
+                    <p><b>Cart</b></p>
+                    <p><b>Shop</b></p>
+                    <p><b>Blog</b></p>
                 </div>
-            </div>
-            <div class="parts">
-                <p><b>Home</b></p>
-                <p><b>About</b></p>
-                <p><b>Login</b></p>
-                <p><b>Cart</b></p>
-                <p><b>Shop</b></p>
-                <p><b>Blog</b></p>
             </div>
         </div>
     </div>
+
     <!-- tere are part imgs of Products -->
     <div class="color">
         <div class="Products">
@@ -216,17 +217,17 @@
                 <p>Men Jacket..</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
-            <div  id="number_1" class="number_1">
+            <div id="number_1" class="number_1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQohTgP2I0AoP24ZK4StkalaWvU0xNs5VUFkw&s">
                 <p>Men Sweaters..</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
-            <div id="number_1"  class="number_1">
+            <div id="number_1" class="number_1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTLqWMzjBee7cnAUSuj_llf-oBmPTv3ihndQ&s">
                 <p>Men Sweatsheet..</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
             </div>
-            <div id="number_1"  class="number_1">
+            <div id="number_1" class="number_1">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRq3BqYRNU0VHmhzqPWqZS3NZ4wYnKtoLolgA&s">
                 <p>Men Muffrels..</p>
                 <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
@@ -277,87 +278,163 @@
             </div>
         </div>
     </div>
-<!-- there are part off img slider type -->
-<div class="slider_type">
-    <img src="https://rukminim1.flixcart.com/fk-p-flap/1600/350/image/d3d9fe6aa331e1fa.jpg?q=20">
-</div>
-<!-- there are carts off 2nd -->
-<div class="cart_lists">
-    <div id="cart1" class="cart1">
-        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/6a50a23ea6319ed4.jpg?q=20">
+    <!-- there are part off img slider type -->
+    <div class="slider_type">
+        <img src="https://rukminim1.flixcart.com/fk-p-flap/1600/350/image/d3d9fe6aa331e1fa.jpg?q=20">
     </div>
-    <div id="cart1" class="cart1">
-        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/547d756f97507e15.jpg?q=20">
-    </div>
-    <div id="cart1" class="cart1">
-        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/c337d4aef8aa4c16.jpg?q=20">
-    </div>
-    <div id="cart1" class="cart1">
-        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/ac7e50a78daeac67.png?q=20">
-    </div>
-    <div id="cart1" class="cart1">
-        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/6c613e3c99904603.jpg?q=20">
-    </div>
-    <div id="cart1" class="cart1">
-        <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/b31a9d73c74a2423.jpg?q=20">
-    </div>
-</div>
-   <!-- there are part off three boxes flex -->
-<div class="main_three_box">
-    <div class="three_box">
-        <div id="number_1" class="number_1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhacOgqJjQwtNEfS6UWR_pNgk7PqU1k213cQ&s">
-            <p>Hair Straighteners</p>
-            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+    <!-- there are carts off 2nd -->
+    <div class="cart_lists">
+        <div id="cart1" class="cart1">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/6a50a23ea6319ed4.jpg?q=20">
         </div>
-        <div  id="number_1" class="number_1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_OGLaWs6eD-y48GkHIMdN4d0QgrbVNrqSyg&s">
-            <p>Hair Dryers</p>
-            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        <div id="cart1" class="cart1">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/547d756f97507e15.jpg?q=20">
         </div>
-        <div id="number_1"  class="number_1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdtIL0hqtLSgasVw2yo2AKFKDm8lm28m8I_Q&s">
-            <p>Grooming Kit</p>
-            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        <div id="cart1" class="cart1">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/c337d4aef8aa4c16.jpg?q=20">
         </div>
-        <div id="number_1"  class="number_1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQz_tpGW0ETxIOkqRFF6ztJdKiqUSdiuTWx-A&s">
-            <p>Hair curless.</p>
-            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        <div id="cart1" class="cart1">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/ac7e50a78daeac67.png?q=20">
+        </div>
+        <div id="cart1" class="cart1">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/6c613e3c99904603.jpg?q=20">
+        </div>
+        <div id="cart1" class="cart1">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/b31a9d73c74a2423.jpg?q=20">
         </div>
     </div>
-    <div id="box_two" class="three_box">
-        <div class="number_1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRELqu5tWLqtIWe-opMttk3VHw3sT5Y4KLV6g&s">
-            <p>Cricket Balls</p>
-            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+    <!-- there are part off three boxes flex -->
+    <div class="main_three_box">
+        <div class="three_box">
+            <div id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhacOgqJjQwtNEfS6UWR_pNgk7PqU1k213cQ&s">
+                <p>Hair Straighteners</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_OGLaWs6eD-y48GkHIMdN4d0QgrbVNrqSyg&s">
+                <p>Hair Dryers</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdtIL0hqtLSgasVw2yo2AKFKDm8lm28m8I_Q&s">
+                <p>Grooming Kit</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQz_tpGW0ETxIOkqRFF6ztJdKiqUSdiuTWx-A&s">
+                <p>Hair curless.</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
         </div>
-        <div class="number_1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTarAFnD07kG_VqE3YR1YL7DBaFUjtWnKPPhQ&s">
-            <p>Caroom</p>
-            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        <div id="box_two" class="three_box">
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRELqu5tWLqtIWe-opMttk3VHw3sT5Y4KLV6g&s">
+                <p>Cricket Balls</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTarAFnD07kG_VqE3YR1YL7DBaFUjtWnKPPhQ&s">
+                <p>Caroom</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSk1B_kca1plhSjkacSCrwU_aiROsTih1nVsA&s">
+                <p>Basket Ball</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtf7rntczZevsBy_Ox7d8tHh0aAYokXgs9YQ&s">
+                <p>Tbel Tanis</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
         </div>
-        <div class="number_1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSk1B_kca1plhSjkacSCrwU_aiROsTih1nVsA&s">
-            <p>Basket Ball</p>
-            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
-        </div>
-        <div class="number_1">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRtf7rntczZevsBy_Ox7d8tHh0aAYokXgs9YQ&s">
-            <p>Tbel Tanis</p>
-            <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+        <div id="box_3" class="three_box">
+            <div class="One_img_bg">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAfc-2MIN6Btu1n5bsogVDfwOom_KTKFtfEQ&s">
+            </div>
         </div>
     </div>
-    <div id="box_3" class="three_box">
-        <div class="One_img_bg">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAfc-2MIN6Btu1n5bsogVDfwOom_KTKFtfEQ&s">
+    <!-- there are part off img slider 2 type -->
+    <div class="slider_type">
+        <img src="https://rukminim1.flixcart.com/fk-p-flap/1600/350/image/d3d9fe6aa331e1fa.jpg?q=20">
+    </div>
+    <!-- there are part of produts -->
+    <div class="part_prodicts">
+        <div class="headind">
+            <h1>Sale for Products</h1>
+        </div>
+        <div id="produts_lists" class="produts_lists">
+            <div id="jackets" class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
+                <p>PUMA,Color..</p>
+                <p>50-80% off</p>
+            </div>
+            <div id="jackets" class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHrs7RO-nKrSvffO4rAuKc0cseW2toTCrs4g&s">
+                <p>i-Phone:12,Color..</p>
+                <p>50% off</p>
+            </div>
+            <div id="jackets" class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5kiisWhY9NF5Y6DgUyDRENhe9Z4XWwCXeLQ&s">
+                <p>Jeeans..</p>
+                <p>50% off</p>
+            </div>
+            <div id="jackets" class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiPpj85DwuGawc_MpU_T8lhBhFBm6tSO84lg&s">
+                <p>Apple Buds.</p>
+                <p>50% off</p>
+            </div>
+            <div id="jackets" class="img1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZimJD1bCNfVa4Ya7MVm7Kgdk_tNA39YeLXA&s">
+                <p>Heater...</p>
+                <p>50% off</p>
+            </div>
         </div>
     </div>
-</div>
-<!-- there are part off img slider 2 type -->
-<div id="next_slide" class="next_slide">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGUtg04-uC-wUBPwPeJKQ7JcLgzTXD5XicVQ&s">
-</div>
+    <!-- there are laste ending page -->
+    <div class="ending">
+        <div class="flexity">
+            <div clas="About">
+                <p><b>ABOUT</b></p>
+                <p><b>Contect Us</b></p>
+                <p><b>Careers</b></p>
+                <p><b>Flipkart Stories</b></p>
+                <p><b>Press</b></p>
+                <p><b>Corporation Infornmation</b></p>
+            </div>
+            <div clas="About">
+                <p><b>GROUP COMPANIES</b></p>
+                <p><b>Myntra</b></p>
+                <p><b>Cleartip</b></p>
+                <p><b>Shopsy</b></p>
+            </div>
+            <div clas="About">
+                <p><b>HELP</b></p>
+                <p><b>Payments</b></p>
+                <p><b>Shipping</b></p>
+                <p><b>Cancellatiom</b></p>
+                <p><b>Press</b></p>
+                <p><b>FAQ</b></p>
+            </div>
+            <div clas="About">
+                <p><b>COSUMER POLICY</b></p>
+                <p><b>Contect Us</b></p>
+                <p><b>Careers</b></p>
+                <p><b>Flipkart Stories</b></p>
+                <p><b>Press</b></p>
+                <p><b>Corporation Infornmation</b></p>
+            </div>
+            <div clas="About">
+                <p><b>ABOUT</b></p>
+                <p><b>Contect Us</b></p>
+                <p><b>Careers</b></p>
+                <p><b>Flipkart Stories</b></p>
+                <p><b>Press</b></p>
+                <p><b>Corporation Infornmation</b></p>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="/script.js"></script>
 
