--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <div class="nav_bar">
+            <a href="/index.html">
             <div class="icons">
 
                 <div class="icone">
@@ -19,6 +20,7 @@
                         src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg">
                 </div>
             </div>
+            </a>
             <div class="serch_12">
                 <div class="serch">
                     <i class="fa-solid fa-magnifying-glass"></i>
@@ -26,30 +28,36 @@
                 </div>
             </div>
             <div class="shorts">
-                <div class="box">
-                    <div class="cart_i">
-                        <i class="fa-regular fa-user"></i>
+                <a href="/Login.html">
+                    <div class="box">
+                        <div class="cart_i">
+                            <i class="fa-regular fa-user"></i>
+                        </div>
+                        <div class="cart">
+                            <p>Login</p>
+                        </div>
                     </div>
-                    <div class="cart">
-                        <p>Login</p>
+                </a>
+                <a href="/cart.html">
+                    <div class="box">
+                        <div class="cart_i">
+                            <i class="fa-solid fa-cart-shopping"></i>
+                        </div>
+                        <div class="cart">
+                            <p>Cart</p>
+                        </div>
                     </div>
-                </div>
-                <div class="box">
-                    <div class="cart_i">
-                        <i class="fa-solid fa-cart-shopping"></i>
+                </a>
+                <a href="/become.html">
+                    <div class="box">
+                        <div id="Become" class="cart_i">
+                            <i class="fa-solid fa-store"></i>
+                        </div>
+                        <div id="Seller" class="cart">
+                            <p>Become a Seller</p>
+                        </div>
                     </div>
-                    <div class="cart">
-                        <p>Cart</p>
-                    </div>
-                </div>
-                <div class="box">
-                    <div id="Become" class="cart_i">
-                        <i class="fa-solid fa-store"></i>
-                    </div>
-                    <div id="Seller" class="cart">
-                        <p>Become a Seller</p>
-                    </div>
-                </div>
+                </a>
             </div>
             <div id="dots" class="cart_i">
                 <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -69,10 +77,10 @@
                     </div>
                 </div>
                 <div class="parts">
-                    <p><b>Home</b></p>
+                    <a href="/index.html"><p><b>Home</b></p></a>
                     <p><b>About</b></p>
-                    <p><b>Login</b></p>
-                    <p><b>Cart</b></p>
+                    <a href="/Login.html"><p><b>Login</b></p></a>
+                    <a href="/cart.html"><p><b>Cart</b></p></a>
                     <p><b>Shop</b></p>
                     <p><b>Blog</b></p>
                 </div>
@@ -362,41 +370,122 @@
     <!-- there are part of produts -->
     <div class="part_prodicts">
         <div class="headind">
-            <h1>Sale for Products</h1>
+            <h1>Best Deals On Appliances</h1>
         </div>
         <div id="produts_lists" class="produts_lists">
             <div id="jackets" class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTt3QdhYSm9BKIYl2eDoCSn3EhAX0mqioZ6VA&s">
-                <p>PUMA,Color..</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQBYOdiA0kc_aO5hYfZjgDXIoIi56VXtQxOQ&s">
+                <p>CC-TV: Camra..</p>
                 <p>50-80% off</p>
             </div>
             <div id="jackets" class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHrs7RO-nKrSvffO4rAuKc0cseW2toTCrs4g&s">
-                <p>i-Phone:12,Color..</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSVpIeRnEpllB-cpjkscfiGpzGoJtfjuKTalQ&s">
+                <p>Pen Drive.</p>
                 <p>50% off</p>
             </div>
             <div id="jackets" class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5kiisWhY9NF5Y6DgUyDRENhe9Z4XWwCXeLQ&s">
-                <p>Jeeans..</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU5UiUOjRa5whUE6t2y8FvKIHRJwqKILIvtg&s">
+                <p>Keybord..</p>
                 <p>50% off</p>
             </div>
             <div id="jackets" class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiPpj85DwuGawc_MpU_T8lhBhFBm6tSO84lg&s">
-                <p>Apple Buds.</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTR5HiGaV-jCcK8jJtwnaWNFNpUoGA7XB-f5g&s">
+                <p>Towels...</p>
                 <p>50% off</p>
             </div>
             <div id="jackets" class="img1">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZimJD1bCNfVa4Ya7MVm7Kgdk_tNA39YeLXA&s">
-                <p>Heater...</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWhC8xiHokzQvvbEoc7c1IlKQgCDwjC-f5oQ&s">
+                <p>Colers Moters...</p>
                 <p>50% off</p>
             </div>
+        </div>
+    </div>
+    <!-- there are parts of card dow  -->
+    <div class="main_three_box">
+        <div class="three_box">
+            <div id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqVKEyMPTcuIP2skEhkOOEYC3nB7j7hqRsyw&s">
+                <p>Fan</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-ILXjs4s42ig7w11KVrxjEqFyYOSNfd4Kaw&s">
+                <p>Toster Macker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTO4GYo6r9uvf6ZFZQYLYLakLHHDvg7AztTXw&s">
+                <p>LCD...</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div id="number_1" class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSiNJnxHwWj7oempV-aLqOthBS9klNQgMM7dg&s">
+                <p>Freezer..</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+        </div>
+        <div id="box_two" class="three_box">
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTIhdG7LlR1h1yP2gBzlmiG3OWczk9P5TsSdA&s">
+                <p>All Out..</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBdQa1CDSZ5dAVBbKPpddGoPkCUeaTUVt-UQ&s">
+                <p>USB Data Cabel</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8nzceDZmWPigRdEnLalUPlMkTQ6Bv1TRFyg&s">
+                <p>Desktop Speacker</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWY4Eka6CN8g3bzyFp8NbWKrYWB6DkDoeMVw&s">
+                <p>Parde..</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+        </div>
+        <div id="box_3" class="three_box">
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTN3L6Gcfpi8N0ETlhH5y8XFf3yXl_bfh-E6A&s">
+                <p>Silai Machine..</p>
+                <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrbAodorPNX0cDDvPlfuxncu7r2kb3fRo3lQ&s">
+                <p>Oven Cooking..</p>
+                <p style="color: rgb(2, 212, 2);"><b>30-50% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReCE_wo-MTrtcFC-jFG_AY_7UgAbdIYrtSoA&s">
+                <p>Bages..</p>
+                <p style="color: rgb(2, 212, 2);"><b>40% OFF</b></p>
+            </div>
+            <div class="number_1">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTgN_d5HTcwQQAootbgxWm0JXpEtp5vGZ24Aw&s">
+                <p>Taddy Bear..</p>
+                <p style="color: rgb(2, 212, 2);"><b>50% OFF</b></p>
+            </div>
+        </div>
+    </div>
+    <!-- there are carts off 3nd -->
+    <div class="cart_lists">
+        <div id="cart1" class="cart1">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/0fd27df2ed8d11cf.jpg?q=20">
+        </div>
+        <div id="cart1" class="cart1">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/a3f4ae6cb355530f.jpg?q=20">
+        </div>
+        <div id="cart1" class="cart1">
+            <img src="https://rukminim1.flixcart.com/fk-p-flap/520/280/image/5be06d8515f7fc85.jpg?q=20">
         </div>
     </div>
     <!-- there are laste ending page -->
     <div class="ending">
         <div class="flexity">
             <div clas="About">
-                <p><b>ABOUT</b></p>
+                <p id="about"><b>ABOUT</b></p>
                 <p><b>Contect Us</b></p>
                 <p><b>Careers</b></p>
                 <p><b>Flipkart Stories</b></p>
@@ -404,13 +493,13 @@
                 <p><b>Corporation Infornmation</b></p>
             </div>
             <div clas="About">
-                <p><b>GROUP COMPANIES</b></p>
+                <p id="about"><b>GROUP COMPANIES</b></p>
                 <p><b>Myntra</b></p>
                 <p><b>Cleartip</b></p>
                 <p><b>Shopsy</b></p>
             </div>
             <div clas="About">
-                <p><b>HELP</b></p>
+                <p id="about"><b>HELP</b></p>
                 <p><b>Payments</b></p>
                 <p><b>Shipping</b></p>
                 <p><b>Cancellatiom</b></p>
@@ -418,23 +507,85 @@
                 <p><b>FAQ</b></p>
             </div>
             <div clas="About">
-                <p><b>COSUMER POLICY</b></p>
-                <p><b>Contect Us</b></p>
-                <p><b>Careers</b></p>
-                <p><b>Flipkart Stories</b></p>
-                <p><b>Press</b></p>
-                <p><b>Corporation Infornmation</b></p>
+                <p id="about"><b>COSUMER POLICY</b></p>
+                <p><b>Cancellation & Returns</b></p>
+                <p><b>Terms Of Use</b></p>
+                <p><b>Security</b></p>
+                <p><b>Privacy</b></p>
+                <p><b>Grievance Redressal</b></p>
+                <p><b>EPR Compllance</b></p>
             </div>
             <div clas="About">
-                <p><b>ABOUT</b></p>
-                <p><b>Contect Us</b></p>
-                <p><b>Careers</b></p>
-                <p><b>Flipkart Stories</b></p>
-                <p><b>Press</b></p>
-                <p><b>Corporation Infornmation</b></p>
+                <p id="about"><b>Mail Us:</b></p>
+                <p><b>Flipkart intenet Private Limited,</b></p>
+                <p><b>Building Alyssa,Begonia &</b></p>
+                <p><b>Clove Embassy Tech Village,</b></p>
+                <p><b>Outer Ring Road,Devarabeesanahail</b></p>
+                <p><b>Kamataka,India</b></p>
+            </div>
+        </div>
+        <div class="main_end">
+            <div class="sosial">
+                <p>Social:</p>
+            </div>
+            <div class="face">
+                <div class="facbook">
+                    <i class="fa-brands fa-facebook"></i>
+                </div>
+                <div class="facbook">
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+                <div class="facbook">
+                    <i class="fa-brands fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <!-- hr next part -->
+        <div class="main_saller">
+            <div class="saller">
+                <div class="become_i">
+                    <i class="fa-solid fa-wallet"></i>
+                </div>
+                <div class="become">
+                    <p>Become a Seller</p>
+                </div>
+            </div>
+            <div class="saller">
+                <div class="become_i">
+                    <i class="fa-solid fa-wallet"></i>
+                </div>
+                <div class="become">
+                    <p>Advertise</p>
+                </div>
+            </div>
+            <div class="saller">
+                <div class="become_i">
+                    <i class="fa-solid fa-circle-notch"></i>
+                </div>
+                <div class="become">
+                    <p>2007-2004 Flipkart.com</p>
+                </div>
+            </div>
+            <div class="saller">
+                <div class="become_i">
+                    <i class="fa-solid fa-gift"></i>
+                </div>
+                <div class="become">
+                    <p>Gift Cart</p>
+                </div>
+            </div>
+            <div class="saller">
+                <div class="become_i">
+                    <i class="fa-solid fa-handshake-angle"></i>
+                </div>
+                <div class="become">
+                    <p>Help Center</p>
+                </div>
             </div>
         </div>
     </div>
+
 </body>
 <script src="/script.js"></script>
 
