--- a/Login.html
+++ b/Login.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- there are nave bar -->
     <div class="container">
         <div class="nav_bar">
             <a href="/index.html">
@@ -86,8 +87,8 @@
             </div>
         </div>
     </div>
-     <!-- there are laste ending page -->
-     <div class="ending">
+    <!-- there are laste ending page -->
+    <div class="ending">
         <div class="flexity">
             <div clas="About">
                 <p id="about"><b>ABOUT</b></p>
@@ -190,12 +191,14 @@
             </div>
         </div>
     </div>
-     <!-- tere are part off ending_homes -->
-     <div id="ending_flexity" class="ending_flexity">
-        <div class="Home_icone">
-            <i class="fa-solid fa-house"></i>
-            <p>Home</p>
-        </div>
+    <!-- tere are part off ending_homes -->
+    <div id="ending_flexity" class="ending_flexity">
+        <a href="/index.html">
+            <div class="Home_icone">
+                <i class="fa-solid fa-house"></i>
+                <p>Home</p>
+            </div>
+        </a>
         <div class="Home_icone">
             <i class="fa-solid fa-play"></i>
             <p>Play</p>
@@ -215,4 +218,5 @@
     </div>
 </body>
 <script src="/Login.js"></script>
+
 </html>
