--- a/become.html
+++ b/become.html
@@ -192,10 +192,12 @@
     </div>
      <!-- tere are part off ending_homes -->
      <div id="ending_flexity" class="ending_flexity">
-        <div class="Home_icone">
-            <i class="fa-solid fa-house"></i>
-            <p>Home</p>
-        </div>
+        <a href="/index.html">
+            <div class="Home_icone">
+                <i class="fa-solid fa-house"></i>
+                <p>Home</p>
+            </div>
+        </a>
         <div class="Home_icone">
             <i class="fa-solid fa-play"></i>
             <p>Play</p>
