--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
                     <p>Mobiles</p>
                 </div>
                 <div class="dress">
-                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJqRZHhQuUdtzgEftmkBI_wQWlInokheE45Q&s">
                     <p>Fashion</p>
                 </div>
             </div>
             <div id="section2" class="section">
                 <div class="dress">
-                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-WXhIudyoZfjyRu5oz3lvm564TSlDFpbR_A&s">
                     <p>Electronics</p>
                 </div>
                 <div class="dress">
-                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRKqtcCSr-nSYnKQ1J51RfDFBsr-fdRIL-k3g&s">
                     <p>Home & Furniture</p>
                 </div>
                 <div class="dress">
@@ -125,11 +125,11 @@
                     <p>Flight Bookings</p>
                 </div>
                 <div class="dress">
-                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR16jmqMH0phntDD7RjcNDRnKh4kHi0cbKGYw&s">
                     <p>Beauty, Toyes & More</p>
                 </div>
                 <div class="dress">
-                    <img src="https://rukminim2.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQaUNe4EcxBHGhbi1blYJQ6Hxc6fiVY23is8w&s">
                     <p>Two Wheelers</p>
                 </div>
             </div>
@@ -784,13 +784,72 @@
                     </div>
                 </div>
             </div>
+            <!-- there are part off img slider 2 type -->
+            <div class="slider_type">
+                <img src="https://m.media-amazon.com/images/S/aplus-media-library-service-media/3047770e-c1f8-424e-a223-19752b98fc70.__CR0,5,970,291_PT0_SX600_V1___.jpg">
+            </div>
+            <!-- there are part off three boxes flex -->
+            <div class="main_three_box">
 
-
-
-
-
-
-
+                <div id="margen_bottem" class="three_box">
+                    <div id="number_1" class="number_1">
+                        <img
+                            src="https://m.media-amazon.com/images/I/71r0Ysx+oVL._AC_UY218_.jpg">
+                        <p>Realme NARZO N61</p>
+                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                    </div>
+                    <div id="number_1" class="number_1">
+                        <img
+                            src="https://m.media-amazon.com/images/I/71qblDCyONL._AC_UY218_.jpg">
+                        <p>Readmi M4 5G</p>
+                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                    </div>
+                    <div id="number_1" class="number_1">
+                        <img
+                            src="https://m.media-amazon.com/images/I/71goZuIha-L._AC_UY218_.jpg">
+                        <p>Samsung Galaxy S23</p>
+                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                    </div>
+                    <div id="number_1" class="number_1">
+                        <img
+                            src="https://m.media-amazon.com/images/I/8189mzscM6L._AC_UY218_.jpg">
+                        <p>Galaxy M35..</p>
+                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                    </div>
+                </div>
+                <div id="box_two" class="three_box">
+                    <div class="number_1">
+                        <img
+                            src="https://m.media-amazon.com/images/I/61Famx7xQwL._AC_SY200_.jpg">
+                        <p>Watch</p>
+                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                    </div>
+                    <div class="number_1">
+                        <img
+                            src="https://m.media-amazon.com/images/I/41BXiWRE6UL._AC_UF480,480_SR480,480_.jpg">
+                        <p>Watch</p>
+                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                    </div>
+                    <div class="number_1">
+                        <img
+                            src="https://m.media-amazon.com/images/I/5110pPjBQkL._AC_UF480,480_SR480,480_.jpg">
+                        <p>Watch</p>
+                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                    </div>
+                    <div class="number_1">
+                        <img
+                            src="https://m.media-amazon.com/images/I/41lPElL3zQL._AC_UF480,480_SR480,480_.jpg">
+                        <p>Watch</p>
+                        <p style="color: rgb(2, 212, 2);"><b>50-70% OFF</b></p>
+                    </div>
+                </div>
+                <div id="box_3" class="three_box">
+                    <div class="One_img_bg">
+                        <img
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlno6CA74zjGVcQbLJCJVt6vy1kTlh2tfZuQ&s">
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- there are laste ending page -->
         <div class="ending">
